--- a/Index.html
+++ b/Index.html
@@ -74,7 +74,7 @@
             <div class="day">Friday</div>
           </div>
           <div class="calendar-grid" id="calendarGrid">
-            <!-- Timeslots will be dynamically added here -->
+            <!-- Timeslots will be dynamically added here sss-->
           </div>
         </div>
       </div>
