--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <main>
       <div class="calendar-container">
-        <!-- Simple Calendar -->
+        <!-- Simple Calendarsss -->
         <div class="calendar">
           <div class="calendar-header">
             <div class="day">Monday</div>
