--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <a href="#calendar-page" class="cta-button">Book a Session</a>
         </div>
         <div class="hero-images">
-          <img src="Court.webp" alt="Pickleball Court 1">
+          <img src="court.webp" alt="Pickleball Court 1">
         </div>
       </div>
       <div class="wave-background">
@@ -30,8 +30,8 @@
           <path fill="#4CAF50" fill-opacity="0.1" d="M0,160L48,149.3C96,139,192,117,288,128C384,139,480,181,576,181.3C672,181,768,139,864,128C960,117,1056,139,1152,149.3C1248,160,1344,160,1392,160L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
         </svg>
         <div class="image-grid">
-          <img src="card.jpg" alt="Pickleball Court 1">
-          <img src="coach.webp" alt="Pickleball Court 2">
+          <img src="image.jpg" alt="Pickleball Court 1">
+          <img src="image0.jpg" alt="Pickleball Court 2">
         </div>
       </div>
       <div class="features">
