--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <main>
       <div class="hero">
         <div class="hero-content">
-          <h2>Improve Your Game Today</h2>
-          <p>Book a coaching session with our experienced pickleball coaches and take your skills to the next level.</p>
+          <h2>Testimonial from Rod R</h2>
+          <p>Malisa is a fantastic pickleball coach who exudes support and encouragement to all her students. Her direct and clear instruction style makes learning new techniques and strategies easy and enjoyable. Thanks to Malisa's guidance, my pickleball game has improved significantly.</p>
           <a href="#calendar-page" class="cta-button">Book a Session</a>
         </div>
         <div class="hero-images">
@@ -36,17 +36,17 @@
       </div>
       <div class="features">
         <div class="feature">
-          <img src="Main.jpg" alt="Coaching Icon">
+          <img src="image1.jpg" alt="Coaching Icon">
           <h3>Expert Coaching</h3>
           <p>Learn from certified pickleball coaches with years of experience.</p>
         </div>
         <div class="feature">
-          <img src="Person.jpg" alt="Schedule Icon">
+          <img src="image3.jpg" alt="Schedule Icon">
           <h3>Flexible Scheduling</h3>
           <p>Book sessions at your convenience with our easy-to-use calendar.</p>
         </div>
         <div class="feature">
-          <img src="community-icon.png" alt="Community Icon">
+          <img src="image2.jpg" alt="Community Icon">
           <h3>Join the Community</h3>
           <p>Connect with other players and grow your network.</p>
         </div>
