--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       <h1>West Ventura Pickleball</h1>
       <p>Check below for available coaching times:</p>
       <a href="#homepage" class="back-button">Back to Home</a>
+      <a href="#admin-login" class="admin-button">Admin Login</a>
     </header>
 
     <main>
