--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
         <div class="hero-content">
           <h2>Improve Your Game Today</h2>
           <p>Book a coaching session with our experienced pickleball coaches and take your skills to the next level.</p>
-          <a href="#calendar-page" class="cta-button">Book a Session</a>
-          <a href="#admin-login" class="admin-button">Admin Login</a>
+          <a href="#calendar" class="cta-button">Book a Session</a>
         </div>
         <div class="hero-images">
           <img src="court.webp" alt="Pickleball Court">
@@ -60,8 +59,10 @@
     <header>
       <h1>West Ventura Pickleball</h1>
       <p>Check below for available coaching times:</p>
-      <a href="#homepage" class="back-button">Back to Home</a>
-      <a href="#admin-login" class="admin-button">Admin Login</a>
+      <div class="calendar-header-buttons">
+        <a href="#homepage" class="back-button">Back to Home</a>
+        <a href="#admin-login" class="admin-button">Admin Login</a>
+      </div>
     </header>
 
     <main>
