--- a/index.html
+++ b/index.html
@@ -22,31 +22,51 @@
           <a href="#calendar" class="cta-button">Book a Session</a>
         </div>
         <div class="hero-images">
-          <img src="court.webp" alt="Pickleball Court">
+          <img src="court.webp" alt="Pickleball Court" class="hero-image">
         </div>
       </div>
+      
+      <div class="testimonial-section">
+        <h3>What Our Players Say</h3>
+        <div class="testimonial-container">
+          <div class="testimonial-slide active">
+            <p>"The coaches transformed my game in just 3 sessions!"</p>
+            <span>- Sarah J.</span>
+          </div>
+          <div class="testimonial-slide">
+            <p>"Best pickleball community in Ventura County!"</p>
+            <span>- Mark T.</span>
+          </div>
+          <div class="testimonial-slide">
+            <p>"I've improved more in a month here than a year on my own."</p>
+            <span>- Lisa M.</span>
+          </div>
+        </div>
+      </div>
+
       <div class="wave-background">
         <svg viewBox="0 0 1440 320" xmlns="http://www.w3.org/2000/svg">
           <path fill="#4CAF50" fill-opacity="0.1" d="M0,160L48,149.3C96,139,192,117,288,128C384,139,480,181,576,181.3C672,181,768,139,864,128C960,117,1056,139,1152,149.3C1248,160,1344,160,1392,160L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
         </svg>
         <div class="image-grid">
-          <img src="image.jpg" alt="Pickleball Court 1">
-          <img src="image0.jpg" alt="Pickleball Court 2">
+          <img src="image.jpg" alt="Pickleball Court 1" class="grid-image">
+          <img src="image0.jpg" alt="Pickleball Court 2" class="grid-image">
         </div>
       </div>
+      
       <div class="features">
         <div class="feature">
-          <img src="image2.jpg" alt="Coaching Icon">
+          <img src="image2.jpg" alt="Coaching Icon" class="feature-image">
           <h3>Expert Coaching</h3>
           <p>Learn from certified pickleball coaches with years of experience.</p>
         </div>
         <div class="feature">
-          <img src="image1.jpg" alt="Schedule Icon">
+          <img src="image1.jpg" alt="Schedule Icon" class="feature-image">
           <h3>Flexible Scheduling</h3>
           <p>Book sessions at your convenience with our easy-to-use calendar.</p>
         </div>
         <div class="feature">
-          <img src="image0.jpg" alt="Community Icon">
+          <img src="image0.jpg" alt="Community Icon" class="feature-image">
           <h3>Join the Community</h3>
           <p>Connect with other players and grow your network.</p>
         </div>
@@ -114,10 +134,6 @@
       <span class="close-modal">&times;</span>
       <h2>Admin Login</h2>
       <form id="login-form">
-        <div class="form-group">
-          <label for="admin-email">Email:</label>
-          <input type="email" id="admin-email" name="admin-email" required>
-        </div>
         <div class="form-group">
           <label for="admin-password">Password:</label>
           <input type="password" id="admin-password" name="admin-password" required>
