--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <p>Check below for available coaching times:</p>
       <div class="calendar-header-buttons">
         <a href="#homepage" class="back-button">Back to Home</a>
-        <a href="#admin-login" class="admin-button">Admin Login</a>
+        <button id="admin-button" class="admin-button">Admin Login</button>
       </div>
     </header>
 
