--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
     </header>
 
     <main>
+      <div class="week-navigation">
+        <button id="prev-week" class="week-nav-button">← Previous Week</button>
+        <h3 id="week-display">Current Week</h3>
+        <button id="next-week" class="week-nav-button">Next Week →</button>
+      </div>
       <div class="calendar-container">
         <div class="calendar">
           <div class="calendar-header">
