--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
 
     <main>
       <div class="week-navigation">
-        <button id="prev-week" class="week-nav-button">← Previous Week</button>
-        <h3 id="week-display">Current Week</h3>
-        <button id="next-week" class="week-nav-button">Next Week →</button>
+        <span id="prev-week" class="week-nav-text">Previous Week</span>
+        <h3 id="week-display">Current Week: Loading...</h3>
+        <span id="next-week" class="week-nav-text">Next Week</span>
       </div>
       <div class="calendar-container">
         <div class="calendar">
