--- a/index.html
+++ b/index.html
@@ -11,18 +11,21 @@
   <section id="homepage">
     <header>
       <h1>West Ventura Pickleball</h1>
-      <p>Your destination for professional pickleball coaching and training.</p>
+      <p>Your destination for professional pickleball coaching.</p>
     </header>
 
     <main>
       <div class="hero">
         <div class="hero-content">
-          <h2>Improve Your Game Today</h2>
-          <p>Book a coaching session with our experienced pickleball coaches and take your skills to the next level.</p>
+          <h2>Improve Your Game Today With Coach Malisa</h2>
+          <p>Book a coaching session with our experienced pickleball coach and take your skills to the next level.</p>
           <a href="#calendar" class="cta-button">Book a Session</a>
         </div>
         <div class="hero-images">
-          <img src="court.webp" alt="Pickleball Court" class="hero-image">
+          <img src="image7.jpg" alt="Pickleball Court" class="hero-image">
+          <p>"In retirement Malisa has found her true passion coaching Pickleball. Although she had played recreationally for several years when the opportunity arose, she jumped at the chance to become a Certified Pickleball Coach, with the PPR – Professional Pickleball Registry. In her professional life Malisa spent many years as a Corporate Trainer this coupled with her lifelong participation in a variety of sports made becoming a coach a natural progression.
+
+            Malisa brings a blend of passion and expertise to the court. With a solid background in Pickleball she strives to assist all levels of players in improving their skills and reaching their full potential. Book a lesson today!!!!"</p>
         </div>
       </div>
       
@@ -30,16 +33,16 @@
         <h3>What Our Players Say</h3>
         <div class="testimonial-container">
           <div class="testimonial-slide active">
-            <p>"The coaches transformed my game in just 3 sessions!"</p>
-            <span>- Sarah J.</span>
+            <p>"Malisa is a fantastic pickleball coach who exudes support and encouragement to all her students. Her direct and clear instruction style makes learning new techniques and strategies easy and enjoyable. Thanks to Malisa's guidance, my pickleball game has improved significantly."</p>
+            <span>- Rod R.</span>
           </div>
           <div class="testimonial-slide">
-            <p>"Best pickleball community in Ventura County!"</p>
-            <span>- Mark T.</span>
+            <p>"Coach Malisa is knowledgeable about the game, positive, and encourages players to have fun and enjoy it."</p>
+            <span>- Michel M.</span>
           </div>
           <div class="testimonial-slide">
-            <p>"I've improved more in a month here than a year on my own."</p>
-            <span>- Lisa M.</span>
+            <p>"Coach Malisa taught me how to play Pickleball. WOW! What a fun game and a great teacher!"</p>
+            <span>- Pete R.</span>
           </div>
         </div>
       </div>
@@ -57,17 +60,17 @@
       <div class="features">
         <div class="feature">
           <img src="image2.jpg" alt="Coaching Icon" class="feature-image">
-          <h3>Expert Coaching</h3>
+          <h3>Peace, Love & Pickleball.....</h3>
           <p>Learn from certified pickleball coaches with years of experience.</p>
         </div>
         <div class="feature">
           <img src="image1.jpg" alt="Schedule Icon" class="feature-image">
-          <h3>Flexible Scheduling</h3>
+          <h3>Sunsets, Surf & Pickleball..</h3>
           <p>Book sessions at your convenience with our easy-to-use calendar.</p>
         </div>
         <div class="feature">
           <img src="image3.jpg" alt="Community Icon" class="feature-image">
-          <h3>Join the Community</h3>
+          <h3>Let's play Pickleball.....</h3>
           <p>Connect with other players and grow your network.</p>
         </div>
       </div>
