--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <div class="hero">
         <div class="hero-content">
           <h2>Improve Your Game Today With Coach Malisa</h2>
-          <p>Book a coaching session with our experienced pickleball coach and take your skills to the next level.</p>
           <a href="#calendar" class="cta-button">Book a Session</a>
         </div>
         <div class="hero-images">
           <img src="image7.jpg" alt="Pickleball Court" class="hero-image">
+          <span>Malisa</span>
           <p>"In retirement Malisa has found her true passion coaching Pickleball. Although she had played recreationally for several years when the opportunity arose, she jumped at the chance to become a Certified Pickleball Coach, with the PPR – Professional Pickleball Registry. In her professional life Malisa spent many years as a Corporate Trainer this coupled with her lifelong participation in a variety of sports made becoming a coach a natural progression.
 
             Malisa brings a blend of passion and expertise to the court. With a solid background in Pickleball she strives to assist all levels of players in improving their skills and reaching their full potential. Book a lesson today!!!!"</p>
