--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a href="#calendar" class="cta-button">Book a Session</a>
         </div>
         <div class="hero-images">
-          <img src="image3.jpg" alt="Pickleball Court" class="hero-image">
+          <img src="Malisa.jpg" alt="Pickleball Court" class="hero-image">
           <span>Malisa</span>
           <p>"In retirement Malisa has found her true passion coaching Pickleball. Although she had played recreationally for several years when the opportunity arose, she jumped at the chance to become a Certified Pickleball Coach, with the PPR – Professional Pickleball Registry. In her professional life Malisa spent many years as a Corporate Trainer this coupled with her lifelong participation in a variety of sports made becoming a coach a natural progression.
 
@@ -69,7 +69,7 @@
           <p>Book sessions at your convenience with our easy-to-use calendar.</p>
         </div>
         <div class="feature">
-          <img src="image7.jpg" alt="Community Icon" class="feature-image">
+          <img src="image3.jpg" alt="Community Icon" class="feature-image">
           <h3>Let's play Pickleball.....</h3>
           <p>Connect with other players and grow your network.</p>
         </div>
