--- a/index.html
+++ b/index.html
@@ -22,10 +22,16 @@
         </div>
         <div class="hero-images">
           <img src="Malisa.jpg" alt="Pickleball Court" class="hero-image">
-          <span>Malisa</span>
-          <p>"In retirement Malisa has found her true passion coaching Pickleball. Although she had played recreationally for several years when the opportunity arose, she jumped at the chance to become a Certified Pickleball Coach, with the PPR – Professional Pickleball Registry. In her professional life Malisa spent many years as a Corporate Trainer this coupled with her lifelong participation in a variety of sports made becoming a coach a natural progression.
+          <div class="about-malisa">
+            <h3>Malisa</h3>
+            <p>"In retirement Malisa has found her true passion coaching Pickleball. Although she had played recreationally for several years when the opportunity arose, she jumped at the chance to become a Certified Pickleball Coach, with the PPR – Professional Pickleball Registry. In her professional life Malisa spent many years as a Corporate Trainer this coupled with her lifelong participation in a variety of sports made becoming a coach a natural progression.
 
-            Malisa brings a blend of passion and expertise to the court. With a solid background in Pickleball she strives to assist all levels of players in improving their skills and reaching their full potential. Book a lesson today!!!!"</p>
+              Malisa brings a blend of passion and expertise to the court. With a solid background in Pickleball she strives to assist all levels of players in improving their skills and reaching their full potential. Book a lesson today!!!!"</p>
+          </div>
+          <div class="additional-images">
+            <img src="image2.jpg" alt="Malisa coaching">
+            <img src="image3.jpg" alt="Malisa playing">
+          </div>
         </div>
       </div>
       
