--- a/index.html
+++ b/index.html
@@ -81,12 +81,14 @@
         </div>
       </div>
       <!-- Add this to your homepage section -->
-<div id="thank-you" style="display: none; text-align: center; padding: 50px; background: white; border-radius: 10px; margin: 20px auto; max-width: 600px;">
-  <h2 style="color: #4CAF50;">🎾 Booking Confirmed!</h2>
-  <p>Thank you for booking with West Ventura Pickleball.</p>
-  <p>Malisa will contact you shortly to confirm your session.</p>
-  <a href="#" class="cta-button">Return to Home</a>
-</div>
+      <div id="thank-you-message" class="thank-you-container hidden">
+        <div class="thank-you-content">
+          <h2>🎾 Booking Confirmed!</h2>
+          <p>Thank you for booking with West Ventura Pickleball.</p>
+          <p>Malisa will contact you shortly to confirm your session.</p>
+          <a href="#" class="cta-button">Return to Home</a>
+        </div>
+      </div>
 
 <script>
   // Show thank-you message when URL has #thank-you
