--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       </div>
       
       <!-- Thank You Message -->
-      <div id="thank-you-message" class="thank-you-container">
+      <div id="thank-you-message" class="thank-you-container" style="display: none;">
         <div class="thank-you-content">
           <h2>🎾 Booking Confirmed!</h2>
           <p>Thank you for booking with West Ventura Pickleball.</p>
