--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
         <h3>What Our Players Say</h3>
         <div class="testimonial-container">
           <div class="testimonial-slide active">
-            <p>"Malisa is a fantastic pickleball coach who exudes support and encouragement to all her students. Her direct and clear instruction style makes learning new techniques and strategies easy and enjoyable. Thanks to Malisa's guidance, my pickleball game has improved significantly."</p>
+            <p>"Malisa is a fantastic pickleball coach who exudes support and encouragement to all her students. Thanks to Malisa's guidance, my pickleball game has improved significantly."</p>
             <span>- Rod R.</span>
           </div>
           <div class="testimonial-slide">
             <p>"Coach Malisa is knowledgeable about the game, positive, and encourages players to have fun and enjoy it."</p>
-            <span>- Michel M.</span>
+            <span>- Michelle M.</span>
           </div>
           <div class="testimonial-slide">
             <p>"Coach Malisa taught me how to play Pickleball. WOW! What a fun game and a great teacher!"</p>
